--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
 			<version>4.1.0</version>
 		</dependency>
 
+		<!--ehCaching -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+
 		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
